--- a/restaurants/templates/list.html
+++ b/restaurants/templates/list.html
@@ -17,7 +17,7 @@
     <div class="col-md-4">
         <div class="card my-card">
           {% if restaurant.logo %}
-            <img class="card-img-top" src="{{restaurant.logo.url}}" alt="Hey Noob, look at me...">
+            <img class="card-img-top" src="{{restaurant.logo.url}}" alt="restaurant logo">
           {% endif %}
           <div class="card-body">
             <h5 class="card-title">{{restaurant.name}}</h5>
@@ -26,11 +26,14 @@
           <ul class="list-group list-group-flush">
             <li class="list-group-item text-center">
                 <a href="{% url 'restaurant-detail' restaurant.id %}" class="btn btn-outline-dark">View</a>
+                
             </li>
           </ul>
         </div>
     </div>
     {% endfor %}
 </div>
+<script>
+ 
 {% endblock content %}
 
